--- a/app/less/try-uri.less
+++ b/app/less/try-uri.less
@@ -1,19 +1,50 @@
-.tryuri-field {
+// Try URI
+// --------------------------------------------------
+
+.uri-format {
+  code {
+    font-size: @font-size-base;
+  }
+}
+
+.tryUri {
+  .bar {
+    height: 68px;
+  }
+}
+
+.js-input-container {
   &:extend(.input-group all);
-}
 
-.tryuri-input {
-  &:extend(.form-control all);
+  .js-uri {
+    &:extend(.form-control all);
 
-  overflow-y: hidden;
-}
+    width: 100%;
+    line-height: 1.6em;
+    border: 1px @gray-lighter solid;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    -webkit-border-top-right-radius: 0px;
+    -webkit-border-bottom-right-radius: 0px;
+    -moz-border-radius-topright: 0px;
+    -moz-border-radius-bottomright: 0px;
+    resize: none;
+    overflow-y: hidden;
+  }
 
-.tryuri-button {
-  &:extend(.input-group-btn all);
+  .tryuri-button {
+    &:extend(.input-group-btn all);
 
-  vertical-align: top;
+    vertical-align: top;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    -webkit-border-top-left-radius: 0px;
+    -webkit-border-bottom-left-radius: 0px;
+    -moz-border-radius-topleft: 0px;
+    -moz-border-radius-bottomleft: 0px;
 
-  button {
-    &:extend(.btn-green all);
+    button {
+      &:extend(.btn-green all);
+    }
   }
 }
